# arkiv-rs

./: Cargo.toml  Makefile.toml  README.md
.github/workflows/: build.yml  ci.sh  clippy.yml  doc.yml  test.yml
src/: archive.rs  download.rs  entry.rs  format.rs  lib.rs  result.rs  tar.rs  zip.rs
tests/: archive.rs  download.rs  entries.rs  entries_by_name.rs  entries_iter.rs  find.rs  unpack.rs  unpack_entry.rs
tests/sample/: sample.tar.zstd
