[package]
name = "arkiv"
version = "0.6.0"
edition = "2021"
authors = ["Cédric Meuter <cedric.meuter@gmail.com>"]
description = "library providing convenience function to manipulate various kind of archive (zip, tar.gz, tar.xz, ... )"
readme = "README.md"
license = "MIT"
keywords = ["compression"]
homepage = "https://github.com/meuter/arkiv-rs"
repository = "https://github.com/meuter/arkiv-rs"

[dependencies]
bzip2 = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", optional = true }
xz2 = { version = "0.1", optional = true }
zstd = { version = "0.12", optional = true }

[dependencies.zip]
version = "0.6"
default-features = false
features = ["deflate", "time"]
optional = true

[features]
default = ["zip", "tar", "gzip", "xz", "bzip", "zstd"]
bzip = ["bzip2"]
gzip = ["flate2"]
xz = ["xz2"]

[dev-dependencies]
tempfile = "3.8.0"
